# app/models/time_log.rb
@@ -1,7 +1,8 @@
 class TimeLog < ApplicationRecord
   monetize :wage_cents
+  validates :wage_cents, numericality: { greater_than: 0 }
 
-  belongs_to :file_import
+  belongs_to :file_import, foreign_key: :report_id
 
   delegate :report_id, to: :file_import
 
