# db/schema.rb
@@ -15,8 +15,8 @@ ActiveRecord::Schema.define(version: 2021_08_24_204403) do
   # These are extensions that must be enabled in order to support this database
   enable_extension "plpgsql"
 
-  create_table "file_imports", force: :cascade do |t|
-    t.integer "report_id", null: false
+  create_table "file_imports", id: false, force: :cascade do |t|
+    t.integer "report_id"
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
   end
@@ -26,13 +26,12 @@ ActiveRecord::Schema.define(version: 2021_08_24_204403) do
     t.date "date", null: false
     t.decimal "hours_worked", null: false
     t.string "job_group", null: false
-    t.bigint "file_import_id"
+    t.bigserial "report_id", null: false
     t.integer "wage_cents", default: 0, null: false
     t.string "wage_currency", default: "CAD", null: false
     t.datetime "created_at", precision: 6, null: false
     t.datetime "updated_at", precision: 6, null: false
-    t.index ["file_import_id"], name: "index_time_logs_on_file_import_id"
+    t.index ["report_id"], name: "index_time_logs_on_report_id"
   end
 
-  add_foreign_key "time_logs", "file_imports"
 end
